# videosplat

./: .gitignore  Findings.md  LICENSE  Program.md  README.md  netlify.toml  pyproject.toml  videosplat_experiments.ipynb
docs/: index.html  scenes.json  viewer.html
docs/scenes/aist/: scene.splat
docs/scenes/flame_steak/: scene.splat
docs/scenes/piano/: scene.splat
patches/: 4dgaussians-dynerf-downsample.patch  README.md
scripts/: build_demo.py  ply_to_splat.py
videosplat/: cli.py  config.py  vram_guard
videosplat/pipeline/: bake_4dgs_keyframes.py  bake_gflow_keyframes.py  bake_gflow_pointrix_keyframes.py  bake_stg_keyframes.py  calibrate.py  casual_capture.py  convert.py  export.py  render_orbit.py  render_path.py  sync.py  train.py
videosplat/viewer/: serve.py
videosplat/viewer/static/: index.html  path_editor.html
